<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_background"
    tools:context="com.example.PizzaApp.MainActivity"
    tools:ignore="Orientation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#3fff">

        <TextView
            android:id="@+id/pizzaDeliveryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/pizza_delivery"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:textColorHint="#FFFBF8"
            android:paddingLeft="15dp"
            android:background="@drawable/btn"
            android:importantForAutofill="no"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="#FFFBF8"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:importantForAutofill="no"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry,TextFields" />

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="#FFFBF8"
            android:visibility="invisible" />

        <Button
            android:id="@+id/logInBtn"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/log_in"
            android:textColor="#FFFBF8"
            android:background="@drawable/login_register_btn"/>
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#3fff"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="90dp"
            android:textColor="#FFFBF8"
            android:text="@string/register"
            android:layout_marginEnd="90dp" />

    </LinearLayout>

</LinearLayout>