<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.example2.Register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_background"
    tools:ignore="ExtraText">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#3fff">

            <TextView
                android:id="@+id/registrationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/registerNameEditText"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:textColorHint="#FFFBF8"
                android:paddingLeft="15dp"
                android:background="@drawable/btn"
                android:importantForAutofill="no"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/registerUsernameEditText"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:textColorHint="#FFFBF8"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:importantForAutofill="no"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:ems="10"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/registerPasswordEditText"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="#FFFBF8"
                android:paddingLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:autofillHints=""
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry,TextFields" />
            <EditText
                android:id="@+id/registerPhoneNumberEditText"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:hint="@string/phone_number"
                android:textColorHint="#FFFBF8"
                android:paddingLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:importantForAutofill="no"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry,TextFields" />

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up"
                android:textColor="#FFFBF8"
                android:background="@drawable/login_register_btn"/>

            <TextView
                android:id="@+id/toLoginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Already have account"
                android:textColor="#FFFBF8" />

        </LinearLayout>

    </LinearLayout>